# firework_lang

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  push_to_main.sh  test.firework
.github/workflows/: rust.yaml
benches/: lexer.rs
core/: firework.core
emacs-mode/: firework-mode.el
example/: .gitignore  config.toml
example/src/: main.firework
firework_tests/: bench.firework
src/: build_system.rs  codegen.rs  core.rs  firework.pest  firework_project.rs  lexer.rs  lib.rs  main.rs  map.rs  parser.rs  repl.rs
src/codegen/: mod.rs
src/parser/: ast.rs  mod.rs
src/transpiler/: mod.rs  transpile.rs
