[package]
name = "firework_lang"
version = "0.2.5"
edition = "2018"
authors = ["Pavlos-Efstathiou"]
description = "Firework Programming Language"
license = "GPL-3.0"
repository = "https://github.com/Pavlos-Efstathiou/firework_lang"
readme = "README.md"
keywords = ["programming-language", "firework"]

[dependencies]
pest = "2"
pest_derive = "2"
clap = "2"
indoc = "1"
toml = "0.5"
rustyline = "9"
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strsim = "0.10"
