[package]
name = "firework_lang"
version = "0.3.0"
edition = "2018"
authors = ["Pavlos-Efstathiou"]
description = "Firework Programming Language"
license = "GPL-3.0"
repository = "https://github.com/Pavlos-Efstathiou/firework_lang"
readme = "README.md"
keywords = ["programming-language", "firework", "llvm"]

[dependencies]
pest = "2"
pest_derive = "2"
clap = "2"
rustyline = "9"
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strsim = "0.10"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }