[package]
name = "firework_lang"
version = "0.3.4"
edition = "2018"
authors = ["Pavlos-Efstathiou"]
description = "Firework Programming Language"
license = "GPL-3.0"
repository = "https://github.com/Pavlos-Efstathiou/firework_lang"
readme = "README.md"
keywords = ["programming-language", "firework", "llvm"]

[dependencies]
pest = "2"
pest_derive = "2"
clap = "2"
rustyline = "9"
colored = "2"
strsim = "0.10"
inkwell_llvm12 = "0.1.0"
indoc = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
home = "0.5"
indicatif = "0.16"